--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body{
+  background-color: #f5f5f5;
+}
+
 .App {
   text-align: center;
 }
@@ -30,4 +34,44 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.modal-backdrop
+{
+    opacity:0.12 !important;
+}
+
+.no-shadow-modal{
+  box-shadow: none !important;
+}
+
+.btn-custom{
+  font-weight: 500 !important;
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+  width: 2.2rem;
+  height: 2.2rem;
+  align-content: center;
+  font-size: 1.5rem;
+  display: inline;
+  font-weight: 400;
+  color: white;
+  text-align: center;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: 0!important;
+  font-size: 1.2rem;
+  line-height: 0 !important;
+  border-radius: 50%!important;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.row{
+  margin-right: 0px !important;
+  margin-left: 0px !important;
 }
